test/functions/resolution/errors/fail-many-candidates.describe.good
fail-many-candidates.chpl:16: error: unresolved call 'foo(1, "hello")'
fail-many-candidates.chpl:13: note: this candidate did not match: foo(a, b)
fail-many-candidates.chpl:13: note: because where clause evaluated to false
fail-many-candidates.chpl:1: note: this candidate did not match: foo(a: int, b: int)
fail-many-candidates.chpl:16: note: because actual argument #2 with type 'string'
fail-many-candidates.chpl:1: note: is passed to formal 'b: int(64)'
fail-many-candidates.chpl:4: note: this candidate did not match: foo(a: string, b: int)
fail-many-candidates.chpl:16: note: because actual argument #1 with type 'int(64)'
fail-many-candidates.chpl:4: note: is passed to formal 'a: string'
note: there are also 2 other candidates, use --print-all-candidates to see them
